Added second line

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         This is the first line written by Samiran in Project0.
+	This is the second line written in local repository.
     </body>
 </html>
