--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         This is the first line written by Samiran in Project0.
 	This is the second line written in local repository.
+	This is the third line written in github repository.
     </body>
 </html>
